# state-abstraction

./: .gitignore  .gitmodules  01_playing_around.ipynb  02_state_abstraction.ipynb  03_heuristic_state_abstraction.ipynb  04_algorithmic_state_abstraction.ipynb  MarkovDecisionProcess.py  README.md  TaskConfig.py  algorithmic_state_abstraction.ipynb  heuristic_state_abstraction.ipynb  install.sh  playing_around.ipynb  pyproject.toml  state_abstraction.ipynb  utils.py
.datalad/: config
assets/: logo.ai
code/: bids_conversion.py
notebooks/: 01_playing_around.ipynb  02_state_abstraction.ipynb  03_heuristic_state_abstraction.ipynb  04_bisim_distance_state_abstraction.ipynb  05_simulation_and_recovery.ipynb  06_bisim_state_abstraction_ott_data.ipynb  06_test_qinverse_abstraction.ipynb  06a_bisim_state_abstraction_ott_data.ipynb  06e_test_qinverse_abstraction.ipynb  07_optimizing_experimental_design.ipynb  07_state_abstraction_ott_data copy.ipynb  07_state_abstraction_ott_data_and_model.ipynb  07_test_epsilon_and_gamma.ipynb  07_test_mdl.ipynb  08_state_abstraction_ott_data_and_model.ipynb  08_test_epsilon_and_gamma.ipynb  09_optimizing_experimental_design.ipynb  09b_model_similarity_state_abstraction_ott_data.ipynb  09c_boltzman_state_abstraction_ott_data.ipynb  09d_entropy_weighted_state_abstraction_ott_data copy.ipynb  S1_ott_replication.ipynb  test_piecewise_abstraction.ipynb
presentations/: State abstraction for decision making.ppt
stabst/: MarkovDecisionProcess.py  TaskConfig.py  __init__.py  models.py  utils.py
(+18 files in other folders)
