[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "stabst"
version = "0.0.1"
authors = [
  { name="Alex Lepauvre", email="alex.lepauvre@gmail.com" },
]
description = "This package provides tools to perform state abstraction for Markov Decision Processes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy",
  "pandas",
  "networkx",
  "matplotlib",
  "scipy",
  "tqdm",
  "pot",
  "joblib",
  "ipykernel",
  "ipywidgets",
]


[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

